app/components/views/TransactionsPage/ExportTab/ExportPage/ExportPage.module.css
.contentTitleButtonsArea {
  margin-left: auto;
}
.isRow {
  display: flex;
  flex-direction: row;
}
.exportInfoFieldName {
  font-weight: 600;
  margin-right: 0.5em;
  margin-left: -0.5em;
}

.exportArea {
  display: flex;
  width: 740px;
  height: 187px;
}

.exportAreaLeft {
  color: var(--title-text-and-button-background);
  font-size: 13px;
  line-height: 17px;
  padding: 20px 40px;
  width: 366px;
  background-color: var(--background-back-color);
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}
.exportAreaLeft label {
  font-size: 13px;
  color: var(--grey-7);
}

.exportAreaRight {
  background-color: var(--disabled-background-color-dark);
  padding: 30px 40px;
  width: 266px;
  font-size: 13px;
  line-height: 16px;
  color: var(--main-dark-blue);
  font-weight: 400;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.exportAreaRight .exportInfoNotExpanded {
  font-weight: 600;
}

.exportInfoDescription {
  margin-bottom: 1em;
}

.modal {
  width: 347px !important;
}
.modalTitle {
  color: var(--grey-7);
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 20px;
}

.modalContent {
  margin-bottom: 20px;
  font-size: 16px;
  line-height: 22px;
  color: var(--main-dark-blue);
}

.modalContent ul {
  margin-left: 0 !important;
}
.modalContent ul li {
  text-align: left;
}

ul.exportInfoFields {
  margin-top: 0;
  margin-left: 40px;
}

.exportAreaButton {
  margin-top: 20px;
  width: 740px;
  text-align: right;
}

@media screen and (max-width: 1180px) {
  .exportAreaLeft {
    width: 273px;
  }
  .exportAreaRight {
    padding-right: 20px;
    width: 263px;
  }

  .exportAreaButton {
    width: 634px;
  }
}

@media screen and (max-width: 768px) {
  .exportArea {
    flex-direction: column;
  }

  .exportAreaLeft {
    width: 307px;
  }

  .exportAreaRight {
    width: 305px;
    min-height: 88px;
  }

  .exportAreaButton {
    width: 355px;
  }
}

